@@ -242,22 +242,38 @@ sub xst_network_dialing_set
   return $ret;
 }
 
-sub xst_network_rh62_interface_set
+sub xst_network_rh62_interface_set_by_dev
 {
   my ($dev, $enabled) = @_;
-  my @ifaces, $i;
 
   if ($enabled)
   {
-    return -1 if &xst_run ("ifup $dev");
+    print STDERR "\n\nifup $dev\n\n";
+#    return -1 if &xst_run ("ifup $dev");
   }
   else
   {
     print STDERR "\n\nifdown $dev\n\n";
-    return -1 if &xst_run ("ifdown $dev");
+#    return -1 if &xst_run ("ifdown $dev");
   }
 
   return 0;
+}
+
+sub xst_network_rh62_interface_set
+{
+  my ($hash, $old_hash, $enabled) = @_;
+  my $dev;
+
+  if ($enabled) {
+    $dev = $$hash{"file"} if (!$old_hash || !$$old_hash{"enabled"});
+  }
+  else
+  {
+    $dev = $$hash{"file"} if ($old_hash && $$old_hash{"enabled"});
+  }
+
+  &xst_network_rh62_interface_set_by_dev ($dev, $enabled) if $dev;
 }
 
 sub xst_network_remove_pap_entry
@@ -278,32 +294,35 @@ sub xst_network_remove_pap_entry
 
 sub xst_network_rh62_interface_delete
 {
-  my $dev = $_[0];
+  my $old_hash = $_[0];
+  my $dev = $$old_hash{"file"};
   my $file = "/etc/sysconfig/network-scripts/ifcfg-$dev";
   my $login;
 
-  &xst_network_rh62_interface_set ($dev, 0);
+  &xst_network_rh62_interface_set_by_dev ($dev, 0);
 
-  $login = xst_parse_sh ($file, "PAPNAME");
-  &xst_network_remove_pap_entry ("/etc/ppp/pap-secrets", $login) if $login ne "";
+  $login = $old_hash{"login"};
+  if ($login ne "")
+  {
+    &xst_network_remove_pap_entry ("/etc/ppp/pap-secrets", $login);
+    &xst_network_remove_pap_entry ("/etc/ppp/chap-secrets", $login);
+  }
 
   unlink ($file);
 }
 
 sub xst_network_interfaces_down_changed
 {
-  my ($proc, $old_hash, $values_hash) = @_;
+  my ($proc_iface_set, $old_hash, $values_hash) = @_;
 
   @ifaces = &xst_network_active_interfaces_get ();
   foreach $i (@ifaces)
   {
-    if (&xst_util_struct_cmp ($old_hash{$i}, $values_hash{$i}))
+    if (!&xst_util_struct_eq ($$values_hash{$i}, $$old_hash{$i}))
     {
-      return -1 if &$proc ($i, 0);
+      &$proc_iface_set ($$values_hash{$i}, $$old_hash{$i}, 0);
     }
   }
-
-  return 0;
 }
 
 sub xst_network_interfaces_set
@@ -315,21 +334,19 @@ sub xst_network_interfaces_set
   my ($tmp, $res);
 
   %dist_attrib = &xst_network_get_interface_replace_table ();
-
   $old_hash = $$old_hash{"interface"};
-  # Disable all running interfaces. fixme: this is ugly: should only
-  # down those that have been changed, downed or deleted.
-  $proc = $dist_attrib{"iface_set"};
-  return -1 if &xst_network_interfaces_down_changed ($proc, $old_hash, $values_hash);
 
-  # Delete all existing interfaces that are not in the hash.
-  $proc = $dist_attrib{"ifaces_get"};
-  @ifaces = &$proc ();
+  $proc = $dist_attrib{"iface_set"};
+  &xst_network_interfaces_down_changed ($proc, $old_hash, $values_hash);
+
+  # Delete all old interfaces that are not in the hash.
   $proc = $dist_attrib{"iface_delete"};
-  foreach $i (@ifaces)
+  foreach $i (keys %$old_hash)
   {
-    &$proc ($i) if !exists ($$values_hash{$i});
+    &$proc ($$old_hash{$i}) if !exists ($$values_hash{$i}) && exists ($$old_hash{$i});
   }
+
+  $proc = $dist_attrib{"iface_set"};
 
   %fn = %{$dist_attrib{"fn"}};
   foreach $i (keys %$values_hash)
@@ -343,10 +360,9 @@ sub xst_network_interfaces_set
     
     $tmp = &xst_replace_from_table ($dist_attrib{"fn"}, $dist_attrib{"table"},
                                     $$values_hash{$i}, $$old_hash{$i});
-    if (!$tmp) # if success saving the settings for the interface, set up immediatly.
-    {
-      $tmp = &$proc ($ {$$values_hash{$i}}{"dev"}, 1) if ($ {$$values_hash{$i}}{"enabled"});
-    }
+
+    # if success saving the settings for the interface, set up immediatly.
+    &$proc ($$values_hash{$i}, $old_hash{$i}, $ {$$values_hash{$i}}{"enabled"}) if (!$tmp);
     
     $res = $tmp if !$res;
   }
@@ -379,6 +395,16 @@ sub xst_network_get_pap_passwd
   return $$arr[1];
 }
 
+sub xst_network_get_chap_passwd
+{
+  my ($file, $login, $passwd) = @_;
+  my @arr;
+
+  return $passwd if ($passwd ne undef);
+  
+  return &xst_network_get_pap_passwd ($file, $login);
+}
+
 sub xst_network_rh62_parse_bootproto
 {
   my $ret;
@@ -404,7 +430,7 @@ sub xst_network_rh62_replace_bootproto
 	  "none" => "none"
 	  );
 
-  return &xst_parse_sh ($file, $key, $proto_name_to_rh62{$value});
+  return &xst_replace_sh ($file, $key, $proto_name_to_rh62{$value});
 }  
 
 # lo_ip is the ip for localhost (commonly 127.0.0.1).
@@ -505,7 +531,8 @@ sub xst_network_get_interfaces_parse_table
         IFCFG => "/etc/sysconfig/network-scripts/ifcfg-#iface#",
         CHAT => "/etc/sysconfig/network-scripts/chat-#iface#",
         IFACE => "#iface#",
-        PAP => "/etc/ppp/pap-secrets" },
+        PAP => "/etc/ppp/pap-secrets",
+        CHAP => "/etc/ppp/chap-secrets" },
 	    table =>
           [
            [ name,               \&xst_parse_sh,      IFCFG, NAME ],
@@ -523,6 +550,7 @@ sub xst_network_get_interfaces_parse_table
            [ remote_address,     \&xst_parse_sh,      IFCFG, REMIP ],
            [ login,              \&xst_parse_sh,      IFCFG, PAPNAME ],
            [ password,           \&xst_network_get_pap_passwd, PAP, "%login" ],
+           [ password,           \&xst_network_get_chap_passwd, CHAP, "%login", "%password" ],
            [ disconnect_timeout, \&xst_parse_sh,      IFCFG, DISCONNECTTIMEOUT ],
            [ retry_timeout,      \&xst_parse_sh,      IFCFG, RETRYTIMEOUT ],
            [ serial_port,        \&xst_parse_sh,      IFCFG, MODEMPORT ],
